plugins {
    id "io.quarkus" version "3.36.1" apply false
    id "com.github.hierynomus.license" version "0.16.1"
}

group = "cz.cvut.kbss"
description = "Text analysis for Czech language and annotation recommendation service"
version = "0.0.1"

def revision = "git rev-list --count HEAD".execute().text.trim()
def hash = "git rev-parse --short HEAD".execute().text.trim()
version = "0.0.1.r${revision}.${hash}"

ext {
    junitVersion = "5.9.2"
}

subprojects {
    apply plugin: "java"
    apply plugin: "java-library"
    apply plugin: "com.github.hierynomus.license"

    compileJava {
        sourceCompatibility = "21"
        targetCompatibility = "21"
        options.compilerArgs << '-parameters'
    }
    compileTestJava {
        options.compilerArgs << '-parameters'
    }

    test {
        useJUnitPlatform()
    }

    configurations.configureEach {
        resolutionStrategy {
            // Spark/Spark-NLP are compiled against Scala 2.12; Quarkus BOM otherwise drags 2.13.x.
            force "org.scala-lang:scala-library:2.12.15"
            force "org.scala-lang:scala-reflect:2.12.15"
            force "org.antlr:antlr4-runtime:4.9.3"
        }
    }

    license {
        header = rootProject.file("header.txt")
        excludes(["**/*.txt", "**/*.properties", "**/*.html", "**/*.xml", "**/*.ttl"])
        mapping {
            java = "SLASHSTAR_STYLE"
        }
    }

    group = parent.group
    version = parent.version

    repositories {
        mavenCentral()
        maven {
            name = "kbss-private"
            url = uri("https://kbss.felk.cvut.cz/m2repo-private")
        }
    }

    dependencies {
        implementation "org.slf4j:slf4j-api:2.0.17"
        implementation "ch.qos.logback:logback-classic:1.5.34"
        compileOnly "org.projectlombok:lombok:1.18.34"

        annotationProcessor "org.projectlombok:lombok:1.18.34"

        testImplementation(libs.junit.api)
        testRuntimeOnly(libs.junit.engine)
        testRuntimeOnly(libs.junit.platform.launcher)
    }
}
